# rvoid

./: Cargo.toml  README.md
.cargo/: config.toml
example/: Cargo.toml  OVMF_VARS.fd
example/esp/EFI/BOOT/: BOOTX64.EFI
example/src/: main.rs
rvoid/: Cargo.toml
rvoid/core/: Cargo.toml
rvoid/core/src/: lib.rs  system_info.rs
rvoid/core/src/memory/: allocator.rs
rvoid/core/src/memory/allocator/: global.rs  regions_array.rs  tests.rs
rvoid/core/src/memory/allocator/regions_array/: tests.rs
rvoid/entry/: Cargo.toml
rvoid/entry/src/: lib.rs
rvoid/src/: lib.rs
rvoid/startup/: Cargo.toml  README.md
rvoid/startup/src/: lib.rs
rvoid/startup/stub/entry_macro/: Cargo.toml
rvoid/startup/stub/entry_macro/src/: lib.rs
rvoid/startup/uefi/: Cargo.toml
rvoid/startup/uefi/backend/: Cargo.toml
rvoid/startup/uefi/backend/src/: lib.rs
rvoid/startup/uefi/entry/src/: lib.rs
rvoid/startup/uefi/entry_macro/: Cargo.toml
rvoid/startup/uefi/entry_macro/src/: lib.rs
rvoid/startup/uefi/src/: lib.rs
