[package]
name = "rvoid"
version = "0.0.1"
edition = "2024"

[dependencies]
rvoid-core = { path = "core" }
rvoid-entry = { path = "entry" }

rvoid-uefi-backend = { path = "startup/uefi/backend", optional = true }

[features]
default = []

uefi = [
    "rvoid-entry/uefi",
    "dep:rvoid-uefi-backend",
]
