[package]
name = "rvoid-startup-uefi"
version = "0.0.1"
edition = "2024"

[dependencies]
rvoid-uefi-entry = { path = "entry" }
rvoid-uefi-backend = { path = "backend" }

[profile.dev]
panic = "abort"
lto = true
overflow-checks = false


[profile.release]
panic = "abort"
lto = true
codegen-units = 1
